--- a/assets/templates/house.html
+++ b/assets/templates/house.html
@@ -1,6 +1,8 @@
 <div id='<%= name %>' class="house">
 	<div class="houseMouseover"></div>
 	<div class="houseBase"></div>
-	<div class="textAreaHover text"> </div>
-	<div class="textArea text"> </div>
+	<div class= "textAreaContainer">
+		<div class="textAreaHover text"> </div>
+		<div class="textArea text"> </div>
+	</div>	
 </div>
