--- a/assets/css/splash.css
+++ b/assets/css/splash.css
@@ -49,12 +49,40 @@
 }
 
 
+.textAreaContainer{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+
+}
+
 .houseMouseover , .textAreaHover{
 	z-index: 9;
 	display: none;
 
 }
 
+/*titles*/
+
+#splashTitle{
+	position: absolute;
+	left: 50%;
+	width: 100%;
+
+}
+
+.title{
+	position: absolute;
+	display: inline-block;
+	height: 100px;
+	
+}
+
+.title img {
+    width: 100%;
+    position: relative;
+    left: -50%;
+}
 
 /*specific house*/
 
